Update Heft-related samples

--- a/heft/heft-node-jest-tutorial/config/jest.config.json
+++ b/heft/heft-node-jest-tutorial/config/jest.config.json
@@ -1,5 +1,5 @@
 {
-  "preset": "./node_modules/@rushstack/heft/includes/jest-shared.config.json",
+  "extends": "@rushstack/heft-jest-plugin/includes/jest-shared.config.json",
   "collectCoverage": true,
   "coverageThreshold": {
     "global": {
