--- a/heft/heft-node-basic-tutorial/config/jest.config.json
+++ b/heft/heft-node-basic-tutorial/config/jest.config.json
@@ -1,3 +1,3 @@
 {
-  "preset": "./node_modules/@rushstack/heft/includes/jest-shared.config.json"
+  "extends": "@rushstack/heft-jest-plugin/includes/jest-shared.config.json"
 }
