--- a/.prettierignore
+++ b/.prettierignore
@@ -68,6 +68,22 @@ common/temp/
 common/autoinstallers/*/.npmrc
 **/.rush/temp/
 
+# Common toolchain intermediate files
+temp
+lib
+lib-amd
+lib-es6
+lib-esnext
+lib-commonjs
+dist
+*.scss.ts
+*.sass.ts
+
+# Visual Studio Code
+.vscode
+
+# Heft
+.heft
 
 #-------------------------------------------------------------------------------------------------------------------
 # Prettier-specific overrides
