--- a/heft/heft-node-basic-tutorial/package.json
+++ b/heft/heft-node-basic-tutorial/package.json
@@ -9,12 +9,12 @@
     "build": "heft test --clean"
   },
   "devDependencies": {
-    "@rushstack/eslint-config": "^2.3.4",
+    "@rushstack/eslint-config": "~2.3.4",
     "@rushstack/heft": "^0.33.0",
     "@rushstack/heft-jest-plugin": "^0.1.3",
     "@types/heft-jest": "1.0.2",
     "@types/node": "10.17.13",
-    "eslint": "~7.12.1",
+    "eslint": "~7.28.0",
     "typescript": "~3.9.7"
   }
 }
