--- a/heft/heft-node-rig-tutorial/package.json
+++ b/heft/heft-node-rig-tutorial/package.json
@@ -9,7 +9,7 @@
     "build": "heft test --clean"
   },
   "devDependencies": {
-    "@rushstack/eslint-config": "^2.3.4",
+    "@rushstack/eslint-config": "~2.3.4",
     "@rushstack/heft": "^0.33.0",
     "@rushstack/heft-node-rig": "^1.0.31",
     "@types/heft-jest": "1.0.2",
