--- a/heft/heft-webpack-basic-tutorial/tsconfig.json
+++ b/heft/heft-webpack-basic-tutorial/tsconfig.json
@@ -3,7 +3,7 @@
 
   "compilerOptions": {
     "outDir": "lib",
-    "rootDir": "src",
+    "rootDirs": ["src/", "temp/sass-ts/"],
 
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
