--- a/heft/heft-fastify-tutorial/package.json
+++ b/heft/heft-fastify-tutorial/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "build": "heft test --clean",
     "start": "heft start --clean",
-    "serve": "fastify start lib/server.js --log-level info",
-    "print-routes": "fastify print-routes lib/server.js"
+    "serve": "fastify start lib/app.js --log-level info",
+    "print-routes": "fastify print-routes lib/app.js"
   },
   "devDependencies": {
     "@rushstack/eslint-config": "^2.4.0",
