--- a/heft/heft-node-jest-tutorial/package.json
+++ b/heft/heft-node-jest-tutorial/package.json
@@ -1,19 +1,23 @@
 {
   "name": "heft-node-jest-tutorial",
-  "description": "Building this project validates that various Jest features work correctly with Heft",
+  "description": "Illustrates how various Jest features work with Heft",
   "version": "1.0.0",
   "private": true,
   "license": "MIT",
   "scripts": {
-    "build": "heft test --clean"
+    "build": "heft build --clean",
+    "_phase:build": "heft run --only build -- --clean",
+    "_phase:test": "heft run --only test -- --clean"
   },
   "devDependencies": {
-    "@rushstack/eslint-config": "^2.4.0",
-    "@rushstack/heft": "^0.38.0",
-    "@rushstack/heft-jest-plugin": "^0.1.28",
-    "@types/heft-jest": "1.0.2",
-    "@types/node": "10.17.13",
-    "eslint": "~7.12.1",
-    "typescript": "~4.3.5"
+    "@rushstack/eslint-config": "workspace:*",
+    "@rushstack/heft": "workspace:*",
+    "@rushstack/heft-jest-plugin": "workspace:*",
+    "@rushstack/heft-lint-plugin": "workspace:*",
+    "@rushstack/heft-typescript-plugin": "workspace:*",
+    "@types/heft-jest": "1.0.1",
+    "@types/node": "14.18.36",
+    "eslint": "~8.7.0",
+    "typescript": "~5.0.4"
   }
 }
