--- a/heft/heft-node-rig-tutorial/package.json
+++ b/heft/heft-node-rig-tutorial/package.json
@@ -6,13 +6,15 @@
   "main": "lib/index.js",
   "license": "MIT",
   "scripts": {
-    "build": "heft test --clean"
+    "build": "heft build --clean",
+    "_phase:build": "heft run --only build -- --clean",
+    "_phase:test": "heft run --only test -- --clean"
   },
   "devDependencies": {
-    "@rushstack/eslint-config": "^2.4.0",
-    "@rushstack/heft": "^0.38.0",
-    "@rushstack/heft-node-rig": "^1.0.31",
-    "@types/heft-jest": "1.0.2",
-    "@types/node": "10.17.13"
+    "@rushstack/eslint-config": "workspace:*",
+    "@rushstack/heft": "workspace:*",
+    "@rushstack/heft-node-rig": "workspace:*",
+    "@types/heft-jest": "1.0.1",
+    "@types/node": "14.18.36"
   }
 }
