--- a/other/packlets-tutorial/package.json
+++ b/other/packlets-tutorial/package.json
@@ -6,13 +6,16 @@
   "license": "MIT",
   "scripts": {
     "build": "heft build --clean",
-    "start": "node lib/start.js"
+    "start": "node lib/start.js",
+    "_phase:build": "heft run --only build -- --clean"
   },
   "devDependencies": {
-    "@rushstack/eslint-config": "^2.4.0",
-    "@rushstack/heft": "^0.38.0",
-    "@types/node": "10.17.13",
-    "eslint": "~7.12.1",
-    "typescript": "~4.3.5"
+    "@rushstack/eslint-config": "workspace:*",
+    "@rushstack/heft": "workspace:*",
+    "@rushstack/heft-lint-plugin": "workspace:*",
+    "@rushstack/heft-typescript-plugin": "workspace:*",
+    "@types/node": "14.18.36",
+    "eslint": "~8.7.0",
+    "typescript": "~5.0.4"
   }
 }
