--- a/heft/heft-serverless-stack-tutorial/package.json
+++ b/heft/heft-serverless-stack-tutorial/package.json
@@ -13,17 +13,17 @@
     "_phase:test": "heft run --only test -- --clean"
   },
   "devDependencies": {
-    "@rushstack/eslint-config": "workspace:*",
-    "@rushstack/heft-jest-plugin": "workspace:*",
-    "@rushstack/heft-lint-plugin": "workspace:*",
-    "@rushstack/heft-serverless-stack-plugin": "workspace:*",
-    "@rushstack/heft-typescript-plugin": "workspace:*",
-    "@rushstack/heft": "workspace:*",
+    "@rushstack/eslint-config": "^3.3.2",
+    "@rushstack/heft-jest-plugin": "^0.7.13",
+    "@rushstack/heft-lint-plugin": "^0.1.14",
+    "@rushstack/heft-serverless-stack-plugin": "^0.2.16",
+    "@rushstack/heft-typescript-plugin": "^0.1.14",
+    "@rushstack/heft": "^0.56.2",
     "@serverless-stack/aws-lambda-ric": "^2.0.12",
     "@serverless-stack/cli": "0.67.0",
     "@serverless-stack/resources": "0.67.0",
     "@types/aws-lambda": "8.10.93",
-    "@types/heft-jest": "1.0.1",
+    "@types/heft-jest": "1.0.2",
     "@types/node": "14.18.36",
     "aws-cdk-lib": "2.7.0",
     "constructs": "~10.0.98",
