--- a/heft/heft-webpack-basic-tutorial/package.json
+++ b/heft/heft-webpack-basic-tutorial/package.json
@@ -15,13 +15,13 @@
     "tslib": "~2.3.1"
   },
   "devDependencies": {
-    "@rushstack/eslint-config": "workspace:*",
-    "@rushstack/heft-jest-plugin": "workspace:*",
-    "@rushstack/heft-lint-plugin": "workspace:*",
-    "@rushstack/heft-typescript-plugin": "workspace:*",
-    "@rushstack/heft-webpack5-plugin": "workspace:*",
-    "@rushstack/heft": "workspace:*",
-    "@types/heft-jest": "1.0.1",
+    "@rushstack/eslint-config": "^3.3.2",
+    "@rushstack/heft-jest-plugin": "^0.7.13",
+    "@rushstack/heft-lint-plugin": "^0.1.14",
+    "@rushstack/heft-typescript-plugin": "^0.1.14",
+    "@rushstack/heft-webpack5-plugin": "^0.8.5",
+    "@rushstack/heft": "^0.56.2",
+    "@types/heft-jest": "1.0.2",
     "@types/react-dom": "16.9.14",
     "@types/react": "16.14.23",
     "@types/webpack-env": "1.18.0",
