--- a/heft/heft-node-basic-tutorial/package.json
+++ b/heft/heft-node-basic-tutorial/package.json
@@ -11,12 +11,12 @@
     "_phase:test": "heft run --only test -- --clean"
   },
   "devDependencies": {
-    "@rushstack/eslint-config": "workspace:*",
-    "@rushstack/heft": "workspace:*",
-    "@rushstack/heft-jest-plugin": "workspace:*",
-    "@rushstack/heft-lint-plugin": "workspace:*",
-    "@rushstack/heft-typescript-plugin": "workspace:*",
-    "@types/heft-jest": "1.0.1",
+    "@rushstack/eslint-config": "^3.3.2",
+    "@rushstack/heft": "^0.56.2",
+    "@rushstack/heft-jest-plugin": "^0.7.13",
+    "@rushstack/heft-lint-plugin": "^0.1.14",
+    "@rushstack/heft-typescript-plugin": "^0.1.14",
+    "@types/heft-jest": "1.0.2",
     "@types/node": "14.18.36",
     "eslint": "~8.7.0",
     "typescript": "~5.0.4"
