--- a/heft/heft-storybook-react-tutorial/package.json
+++ b/heft/heft-storybook-react-tutorial/package.json
@@ -18,15 +18,15 @@
   },
   "devDependencies": {
     "@babel/core": "~7.20.0",
-    "@rushstack/eslint-config": "workspace:*",
-    "@rushstack/heft-jest-plugin": "workspace:*",
-    "@rushstack/heft-lint-plugin": "workspace:*",
-    "@rushstack/heft-storybook-plugin": "workspace:*",
-    "@rushstack/heft-typescript-plugin": "workspace:*",
-    "@rushstack/heft-webpack4-plugin": "workspace:*",
-    "@rushstack/heft": "workspace:*",
+    "@rushstack/eslint-config": "^3.3.2",
+    "@rushstack/heft-jest-plugin": "^0.7.13",
+    "@rushstack/heft-lint-plugin": "^0.1.14",
+    "@rushstack/heft-storybook-plugin": "^0.3.16",
+    "@rushstack/heft-typescript-plugin": "^0.1.14",
+    "@rushstack/heft-webpack4-plugin": "^0.7.5",
+    "@rushstack/heft": "^0.56.2",
     "@storybook/react": "~6.4.18",
-    "@types/heft-jest": "1.0.1",
+    "@types/heft-jest": "1.0.2",
     "@types/node": "14.18.36",
     "@types/react-dom": "16.9.14",
     "@types/react": "16.14.23",
