--- a/heft/heft-web-rig-app-tutorial/package.json
+++ b/heft/heft-web-rig-app-tutorial/package.json
@@ -16,9 +16,9 @@
     "tslib": "~2.3.1"
   },
   "devDependencies": {
-    "@rushstack/eslint-config": "workspace:*",
-    "@rushstack/heft-web-rig": "workspace:*",
-    "@rushstack/heft": "workspace:*",
+    "@rushstack/eslint-config": "^3.3.2",
+    "@rushstack/heft-web-rig": "^0.18.13",
+    "@rushstack/heft": "^0.56.2",
     "@types/react-dom": "16.9.14",
     "@types/react": "16.14.23",
     "@types/webpack-env": "1.18.0",
