heft-fastify-tutorial builds again and now uses heft-node-rig

--- a/heft/heft-fastify-tutorial/config/rush-project.json
+++ b/heft/heft-fastify-tutorial/config/rush-project.json
@@ -1,3 +1,8 @@
 {
-  "projectOutputFolderNames": ["lib", "dist"]
+  "operationSettings": [
+    {
+      "operationName": "build",
+      "outputFolderNames": ["lib", "dist"]
+    }
+  ]
 }
