--- a/heft/heft-fastify-tutorial/package.json
+++ b/heft/heft-fastify-tutorial/package.json
@@ -6,6 +6,8 @@
   "license": "MIT",
   "scripts": {
     "build": "heft test --clean",
+    "_phase:build": "heft run --only build -- --clean",
+    "_phase:test": "heft run --only test -- --clean",
     "start": "heft start --clean",
     "serve": "fastify start lib/app.js --log-level info",
     "print-routes": "fastify print-routes lib/app.js",
@@ -14,7 +16,8 @@
   "devDependencies": {
     "@rushstack/eslint-config": "^3.3.2",
     "@rushstack/heft": "^0.56.2",
-    "@rushstack/heft-jest-plugin": "^0.7.13",
+    "@rushstack/heft-node-rig": "^2.2.13",
+    "@types/ejs": "3.1.2",
     "@types/heft-jest": "1.0.2",
     "@types/node": "14.18.36",
     "eslint": "~8.7.0",
